Update CSS styles and fix alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,11 @@ body {
   height: 100vh;
 }
 
+.txt-body {
+  color: white;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* offsetX, offsetY, blurRadius, color */
+}
+
 .custom-container {
   position: relative;
 }
@@ -38,7 +43,7 @@ body {
   z-index: 2;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   justify-content: center;
 }
 
